po4a (0.37.0-1) unstable; urgency=low

  * New upstream release
  * Add xml build-deps for new po4a-build script.
  * Add myself as uploader for po4a-build development.
  * Update copyright for po4a-build (GPL-3+)
  * Add lintian overrides for #555330

 -- Neil Williams <codehelp@debian.org>  Thu, 12 Nov 2009 20:22:31 +0000

po4a (0.36.6-1) unstable; urgency=low

  * New upstream release.
    + Updated Czech translation. Closes: #549092
    + Updated German translation. Closes: #545909
    + Updated Spanish translation. Closes: #554771
    + Fixed bashism in po4apod-display-po. Closes: #547757, #546601

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Wed, 30 Sep 2009 21:02:22 +0200

po4a (0.36.5-1) unstable; urgency=low

  * New upstream release.
    + Updated German translation. Closes: #545909

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Thu, 10 Sep 2009 22:52:47 +0200

po4a (0.36.4-1) unstable; urgency=low

  * New upstream release.
    + Updated Basque translation. Closes: #543826
    + Updated Czech translation. Closes: #543513
    + Updated Spanish translation. Closes: #541785, #542766
    + Updated Russian translation. Closes: #544136
    + Updated Swedish translation. Closes: #543410
    + Added option --srcdir and --destdir to po4a. Closes: #538136
  * debian/control: Standards-Version bumped to 3.8.3.

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Sun, 30 Aug 2009 16:33:49 +0200

po4a (0.36.3-1) unstable; urgency=low

  * New upstream bugfix release.

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Wed, 22 Jul 2009 13:06:37 +0200

po4a (0.36.2-1) unstable; urgency=low

  * New upstream release:
    + Markdown: Improved support. Closes: #530574
    + Markdown: Avoid translation of some markups: title and horizontal rules.
      Closes: #537570
    + po4apod-display-po: Added new script to display previews of POD
    translations. Closes: #445693