@@ -5,8 +5,9 @@ po4a (0.37.0-1) unstable; urgency=low
   * Add myself as uploader for po4a-build development.
   * Update copyright for po4a-build (GPL-3+)
   * Add lintian overrides for #555330
+  * Adapt rules to use of po4a-build internally.
 
- -- Neil Williams <codehelp@debian.org>  Thu, 12 Nov 2009 20:22:31 +0000
+ -- Neil Williams <codehelp@debian.org>  Thu, 12 Nov 2009 20:23:24 +0000
 
 po4a (0.36.6-1) unstable; urgency=low
 
